# decorate_macro

./: Cargo.toml  README.md  plan.md
docs/: advanced.md  errors.md  examples.md
examples/: safe_scraping.rs
examples/decorators/: circuit_breaker.rs  debounce.rs  log_errors.rs  measure_time.rs  mod.rs  rate_limit.rs  safe_decorator.rs  trace_calls.rs  validate.rs  with_backoff.rs  with_cache.rs  with_retry.rs  with_timeout.rs
src/: lib.rs  main.rs
tests/: compile_tests.rs  decorator_tests.rs
tests/fail/: const_fn.rs  const_fn.stderr  empty_decorators.stderr  empty_path.rs  empty_path.stderr  generic_params.rs  generic_params.stderr  invalid_args.rs  invalid_args.stderr  invalid_decorator.rs  invalid_decorator.stderr  invalid_instance_method.rs  invalid_instance_method.stderr  invalid_meta.rs  invalid_meta.stderr  invalid_self_path.rs  invalid_self_path.stderr  invalid_transform.rs  invalid_transform.stderr  wrong_decorator_signature.rs  wrong_decorator_signature.stderr  wrong_return_type.rs  wrong_return_type.stderr
tests/pass/: advanced_decoration.rs  async_decorator.rs  basic.rs  decorator_args.rs  generic.rs  instance_decorators.rs  multiple_decorators.rs  string_self_path.rs  struct_methods.rs  transform_params.rs
