[package]
name = "decorate_macro"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A procedural macro for function decoration in Rust"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
log = "0.4"
env_logger = "0.11.6"

[dev-dependencies]
trybuild = "1.0"
proc-macro2 = "1.0"
tokio = { version = "1", features = ["full", "rt", "macros"] }
