[package]
name = "decorate_macro"
version = "0.1.1"
edition = "2024"
authors = [
    "Rustaceans <rustaceans@example.com>",
    "Your Name <your.email@example.com>",
]
description = "A powerful and flexible procedural macro for Rust that enables Python-style function decoration with advanced features like parameter transformation, result transformation, and execution hooks."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.100", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.94"
either = "1.15.0"

[dev-dependencies]
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
trybuild = "1.0.104"
